@@ -1,15 +1,20 @@
 package cstjean.mobile.dames;
 
+import static org.junit.Assert.assertEquals;
+
 import java.util.List;
 import junit.framework.TestCase;
+
+import org.junit.Test;
 
 /**
  * Test la classe Prise.
  */
-public class TestPrise extends TestCase {
+public class TestPrise {
     /**
      * Test la création d'une prise.
      */
+    @Test
     public void testCreer() {
         Prise racine = new Prise(1);
         assertEquals(1, racine.getPosition());
@@ -22,14 +27,15 @@ public class TestPrise extends TestCase {
     /**
      * Fait des tests sur les enfants d'une prise.
      */
+    @Test
     public void testPrisesEnfants() {
         Prise racine = new Prise(1);
         Prise enfant = new Prise(12, 7);
 
         racine.addPriseEnfant(enfant);
-        assertEquals(enfant, racine.getPrisesEnfants().getFirst());
+        assertEquals(enfant, racine.getPrisesEnfants().get(0));
 
         List<List<Prise>> listeMeilleursPrises = racine.trouverMeilleursSuiteDePrises();
-        assertEquals(12, listeMeilleursPrises.getFirst().getFirst().getPosition());
+        assertEquals(12, listeMeilleursPrises.get(0).get(0).getPosition());
     }
 }
